syntax = "proto3";

package greet;

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

service Greeter {
  rpc Nothing (google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayOther (Other) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message Other {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message Person {
  string name = 1;
  int32 id = 2;
  string email = 3;
}

message MyMessageNullValue {
	google.protobuf.NullValue val = 1;
}

message MyMessageAny {
	google.protobuf.Any val1 = 1;
	google.protobuf.Any val2 = 2;
}

message MyMessageValue {
	google.protobuf.Value val1 = 1;
	google.protobuf.Value val2 = 2;
	google.protobuf.Value val3 = 3;
	google.protobuf.Value val4 = 4;
	google.protobuf.Value val5 = 5;
	google.protobuf.Value val6 = 6;
}

message MyMessageStruct {
	google.protobuf.Struct val = 1;
}

message MyMessageListValue {
	google.protobuf.ListValue val = 1;
}